--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.4", features = ["derive"] }
 predicates = "1.0.8"
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 assert_cmd = "1.0"
+
+[[example]]
+name = "basic_usage"
+path = "examples/basic_usage.rs"
