feat: Add comprehensive dependencies and metadata for PostgreSQL log analysis
- Add all required dependencies for robust log analysis:
  - regex: Pattern matching for log parsing
  - tokio: Async file I/O with full features
  - anyhow: Simplified error handling
  - thiserror: Custom error type definitions
  - indicatif: Progress bar display
  - env_logger & log: Structured logging support
- Add development dependencies for testing:
  - tempfile: Temporary file handling in tests
  - assert_cmd & predicates: CLI testing utilities
- Add comprehensive package metadata:
  - Authors, description, license, repository
  - Keywords and categories for crates.io
  - README reference
- Maintain existing dependencies (clap, serde, chrono)
- Ensure project builds as both libr

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,18 +2,31 @@
 name = "pg-loggrep"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Rajat Venkatesh <your.email@example.com>"]
+description = "A fast PostgreSQL log analysis tool written in Rust"
+license = "MIT"
+repository = "https://github.com/yourusername/pg-loggrep"
+keywords = ["postgresql", "logs", "analysis", "database", "performance"]
+categories = ["command-line-utilities", "database", "development-tools"]
+readme = "README.md"
 
 [dependencies]
 clap = { version = "4.3.4", features = ["derive"] }
-predicates = "1.0.8"
-chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+regex = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1.0", features = ["full"] }
+anyhow = "1.0"
+thiserror = "1.0"
+indicatif = "0.17"
+env_logger = "0.10"
+log = "0.4"
 
 [dev-dependencies]
+tempfile = "3.0"
 assert_cmd = "1.0"
+predicates = "1.0.8"
 
 [[example]]
 name = "basic_usage"
