--- a/demo/docker/postgres/postgresql.conf
+++ b/demo/docker/postgres/postgresql.conf
@@ -1,31 +1,220 @@
-# PostgreSQL configuration for pg-loggrep demo
-# Basic settings
+# PostgreSQL 17 configuration for pg-loggrep demo
+# Optimized for comprehensive logging and analysis
+
+#------------------------------------------------------------------------------
+# CONNECTIONS AND AUTHENTICATION
+#------------------------------------------------------------------------------
+
 listen_addresses = '*'
 port = 5432
 max_connections = 100
+superuser_reserved_connections = 3
 
-# Logging configuration
-logging_collector = on
+#------------------------------------------------------------------------------
+# RESOURCE USAGE (except WAL)
+#------------------------------------------------------------------------------
+
+shared_buffers = 128MB
+huge_pages = try
+work_mem = 4MB
+maintenance_work_mem = 64MB
+effective_cache_size = 256MB
+effective_io_concurrency = 1
+
+#------------------------------------------------------------------------------
+# WRITE-AHEAD LOG
+#------------------------------------------------------------------------------
+
+wal_level = replica
+fsync = on
+synchronous_commit = on
+wal_sync_method = fsync
+full_page_writes = on
+wal_compression = off
+wal_log_hints = off
+wal_buffers = -1
+wal_writer_delay = 200ms
+commit_delay = 0
+commit_siblings = 5
+checkpoint_timeout = 5min
+max_wal_size = 1GB
+min_wal_size = 80MB
+checkpoint_completion_target = 0.5
+checkpoint_warning = 30s
+max_wal_senders = 10
+wal_keep_size = 0
+wal_sender_timeout = 60s
+
+#------------------------------------------------------------------------------
+# REPLICATION
+#------------------------------------------------------------------------------
+
+max_replication_slots = 10
+track_commit_timestamp = off
+
+#------------------------------------------------------------------------------
+# QUERY TUNING
+#------------------------------------------------------------------------------
+
+enable_bitmapscan = on
+enable_hashagg = on
+enable_hashjoin = on
+enable_indexscan = on
+enable_indexonlyscan = on
+enable_material = on
+enable_mergejoin = on
+enable_nestloop = on
+enable_seqscan = on
+enable_sort = on
+enable_tidscan = on
+
+#------------------------------------------------------------------------------
+# REPORTING AND LOGGING
+#------------------------------------------------------------------------------
+
+# Where to log
 log_destination = 'stderr'
+logging_collector = on
 log_directory = '/var/log/postgresql'
-log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'
-log_statement = 'all'
-log_duration = on
+log_filename = 'postgresql-%Y-%m-%d.log'
+log_file_mode = 0600
+log_truncate_on_rotation = off
+log_rotation_age = 1d
+log_rotation_size = 10MB
+
+# When to log
+log_min_messages = info
+log_min_error_statement = error
 log_min_duration_statement = 0
-log_line_prefix = '%t [%p]: [%l-1] user=%u,db=%d,app=%a,client=%h '
+
+# What to log
+debug_print_parse = off
+debug_print_rewritten = off
+debug_print_plan = off
+debug_pretty_print = on
 log_checkpoints = on
 log_connections = on
 log_disconnections = on
+log_duration = on
+log_error_verbosity = default
+log_hostname = off
+log_line_prefix = '%m [%p] %q%u@%d %a: '
 log_lock_waits = on
+log_statement = 'all'
+log_replication_commands = off
 log_temp_files = 0
+log_timezone = 'UTC'
 
-# Performance settings for demo
-shared_buffers = 128MB
-effective_cache_size = 256MB
-work_mem = 4MB
-maintenance_work_mem = 64MB
+#------------------------------------------------------------------------------
+# PROCESS TITLE
+#------------------------------------------------------------------------------
 
-# WAL settings
-wal_level = replica
-max_wal_senders = 3
-wal_keep_segments = 8
+cluster_name = 'pg-loggrep-demo'
+update_process_title = on
+
+#------------------------------------------------------------------------------
+# STATISTICS
+#------------------------------------------------------------------------------
+
+track_activities = on
+track_counts = on
+track_io_timing = on
+track_functions = none
+track_activity_query_size = 1024
+stats_temp_directory = 'pg_stat_tmp'
+
+#------------------------------------------------------------------------------
+# AUTOVACUUM
+#------------------------------------------------------------------------------
+
+autovacuum = on
+log_autovacuum_min_duration = -1
+autovacuum_max_workers = 3
+autovacuum_naptime = 1min
+autovacuum_vacuum_threshold = 50
+autovacuum_analyze_threshold = 50
+autovacuum_vacuum_scale_factor = 0.2
+autovacuum_analyze_scale_factor = 0.1
+autovacuum_freeze_max_age = 200000000
+autovacuum_multixact_freeze_max_age = 400000000
+autovacuum_vacuum_cost_delay = 2ms
+autovacuum_vacuum_cost_limit = -1
+
+#------------------------------------------------------------------------------
+# CLIENT CONNECTION DEFAULTS
+#------------------------------------------------------------------------------
+
+search_path = '"$user", public'
+row_security = on
+default_tablespace = ''
+temp_tablespaces = ''
+check_function_bodies = on
+default_transaction_isolation = 'read committed'
+default_transaction_read_only = off
+default_transaction_deferrable = off
+session_replication_role = 'origin'
+statement_timeout = 0
+lock_timeout = 0
+idle_in_transaction_session_timeout = 0
+vacuum_freeze_min_age = 50000000
+vacuum_freeze_table_age = 150000000
+vacuum_multixact_freeze_min_age = 5000000
+vacuum_multixact_freeze_table_age = 150000000
+bytea_output = 'hex'
+xmlbinary = 'base64'
+xmloption = 'content'
+gin_fuzzy_search_limit = 0
+
+#------------------------------------------------------------------------------
+# LOCK MANAGEMENT
+#------------------------------------------------------------------------------
+
+deadlock_timeout = 1s
+max_locks_per_transaction = 64
+max_pred_locks_per_transaction = 64
+max_pred_locks_per_relation = -2
+max_pred_locks_per_page = 2
+
+#------------------------------------------------------------------------------
+# VERSION AND PLATFORM COMPATIBILITY
+#------------------------------------------------------------------------------
+
+array_nulls = on
+backslash_quote = safe_encoding
+escape_string_warning = on
+lo_compat_privileges = off
+operator_precedence_warning = off
+quote_all_identifiers = off
+standard_conforming_strings = on
+synchronize_seqscans = on
+transform_null_equals = off
+
+#------------------------------------------------------------------------------
+# ERROR HANDLING
+#------------------------------------------------------------------------------
+
+exit_on_error = off
+restart_after_crash = on
+
+#------------------------------------------------------------------------------
+# CONFIG FILE INCLUDES
+#------------------------------------------------------------------------------
+
+# These options allow settings to be loaded from files other than the
+# default postgresql.conf.
+
+#include_dir = 'conf.d'			# include files ending in '.conf' from
+					# directory 'conf.d'
+#include_if_exists = 'exists.conf'	# include file only if it exists
+#include = 'special.conf'		# include file
+
+#------------------------------------------------------------------------------
+# CUSTOMIZED OPTIONS
+#------------------------------------------------------------------------------
+
+# Add settings for extensions here
+shared_preload_libraries = 'pg_stat_statements'
+pg_stat_statements.max = 10000
+pg_stat_statements.track = all
+pg_stat_statements.track_utility = on
+pg_stat_statements.save = on
