--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,18 @@ tempfile = "3.0"
 assert_cmd = "1.0"
 predicates = "1.0.8"
 
+[[test]]
+name = "parser_tests"
+path = "tests/unit/parser_tests.rs"
+
+[[test]]
+name = "analytics_tests"
+path = "tests/unit/analytics_tests.rs"
+
+[[test]]
+name = "output_tests"
+path = "tests/unit/output_tests.rs"
+
 [[example]]
 name = "basic_usage"
 path = "examples/basic_usage.rs"
