--- a/demo/docker/docker-compose.yml
+++ b/demo/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_DB: testdb
       POSTGRES_USER: testuser
       POSTGRES_PASSWORD: testpass
-      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=peer"
+      POSTGRES_INITDB_ARGS: "--auth-host=trust --auth-local=trust"
     ports:
       - "5432:5432"
     volumes:
