--- a/demo/docker/postgres/postgresql.conf
+++ b/demo/docker/postgres/postgresql.conf
@@ -1,4 +1,4 @@
-# PostgreSQL 17 configuration for pg-loggrep demo
+# PostgreSQL 17 configuration for pg-logstats demo
 # Optimized for comprehensive logging and analysis
 
 #------------------------------------------------------------------------------
@@ -109,7 +109,7 @@ log_timezone = 'UTC'
 # PROCESS TITLE
 #------------------------------------------------------------------------------
 
-cluster_name = 'pg-loggrep-demo'
+cluster_name = 'pg-logstats-demo'
 update_process_title = on
 
 #------------------------------------------------------------------------------
