--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "1.0"
 indicatif = "0.17"
 env_logger = "0.10"
 log = "0.4"
+sqlparser = { version = "0.47.0", features = ["visitor"] }
 
 [dev-dependencies]
 tempfile = "3.0"
