--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,27 +12,22 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Rust
-        uses: rust-lang/setup-rust@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          rust-version: stable
+          components: rustfmt
+      - uses: actions-rust-lang/rustfmt@v1
 
-      - name: Cache cargo registry
-        uses: actions/cache@v3
+      - name: Cache cargo artifacts
+        uses: actions/cache@v4
         with:
-          path: ~/.cargo/registry
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
           key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
 
-      - name: Cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-
+      - name: Check formatting
+        run: cargo fmt --all -- --check
 
       - name: Build
         run: cargo build --verbose
